WIP: join event route and swagger docs
